Added .prettierrc.json, optimized jpg images.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
   </head>
 
@@ -35,25 +35,29 @@
           <li>
             <h3>Strategy</h3>
             <p>
-              Our goal is to identify the business problem to walk away with the perfect and creative solution.
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
             </p>
           </li>
           <li>
             <h3>Punctuality</h3>
             <p>
-              Bring the key message to the brand's audience for the best price within the shortest possible time.
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
             </p>
           </li>
           <li>
             <h3>Diligence</h3>
             <p>
-              Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3>Technologies</h3>
             <p>
-              Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
@@ -63,13 +67,17 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/section2/img1.jpg" alt="desktop" width="360">
+            <img src="./images/section2/img1.jpg" alt="desktop" width="360" />
           </li>
           <li>
-            <img src="./images/section2/img2.jpg" alt="mobile" width="360">
+            <img src="./images/section2/img2.jpg" alt="mobile" width="360" />
           </li>
           <li>
-            <img src="./images/section2/img3.jpg" alt="mobile synchronized with the computer" width="360">
+            <img
+              src="./images/section2/img3.jpg"
+              alt="synchronization of a mobile with a laptop"
+              width="360"
+            />
           </li>
         </ul>
       </section>
@@ -78,22 +86,38 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/section3/mark.jpg" alt="M.Guerrero's photo" width="264">
+            <img
+              src="./images/section3/mark.jpg"
+              alt="M.Guerrero's photo"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/section3/tom.jpg" alt="T.Ford's photo" width="264">
+            <img
+              src="./images/section3/tom.jpg"
+              alt="T.Ford's photo"
+              width="264"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/section3/camila.jpg" alt="C.Garcia's photo" width="264">
+            <img
+              src="./images/section3/camila.jpg"
+              alt="C.Garcia's photo"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/section3/daniel.jpg" alt="D.Wilson's photo" width="264">
+            <img
+              src="./images/section3/daniel.jpg"
+              alt="D.Wilson's photo"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -104,7 +128,8 @@
     <footer>
       <a href="./index.html">WEBSTUDIO</a>
       <p>
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
